added faveicons and glowy title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" type="image/ico" href="public/images/favicon/favicon_64x64.ico">
+        <link rel="icon" type="image/ico" href="public/images/favicon/favicon_32x32.ico">
+        <link rel="icon" type="image/ico" href="public/images/favicon/favicon_16x16.ico">
         <link rel="stylesheet" type="text/css" href="public/styles/index.css">
 
         <script src="public/javascript/CM.js"></script>
