added watermark and a pulse effect

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>TLIY - Color Match</title>
+
         <link rel="icon" type="image/ico" href="public/images/favicon/favicon_64x64.ico">
         <link rel="icon" type="image/ico" href="public/images/favicon/favicon_32x32.ico">
         <link rel="icon" type="image/ico" href="public/images/favicon/favicon_16x16.ico">
